# encoder_training

./: README.md  requirements.txt  setup.py
configs/kalm_embedding/: classification.yaml  embedding.yaml  ner.yaml
encoder_training/: __init__.py  cli.py
encoder_training/core/: __init__.py  config.py  data_loader.py  metrics.py  utils.py
encoder_training/models/: __init__.py  base.py  registry.py
encoder_training/models/kalm_embedding/: __init__.py  config.py  trainer.py
encoder_training/models/multilingual_300m/: __init__.py  config.py  trainer.py
encoder_training/models/qwen_embedding/: __init__.py  config.py  trainer.py
examples/: train_classification_example.py
examples/datasets/: classification_sample.csv  embedding_sample.csv  ner_sample.conll
v2/encoder-training-v2/: README.md  pyproject.toml  requirements.txt  scaling.md
v2/encoder-training-v2/docker/: Dockerfile  docker-compose.yaml
v2/encoder-training-v2/examples/: run_full_finetune_deepspeed.sh  run_head_finetune.sh  sample_dataset.csv
v2/encoder-training-v2/src/: __init__.py  config.py  data.py  evaluate.py  infer.py  losses.py  model_wrapper.py  train.py  utils.py
v2/encoder-training-v2/src/experiments/: full_finetune_deepspeed.yaml  head_only.yaml  peft_lora.yaml
v2/encoder-training-v2/tests/: test_data_streaming.py  test_model_wrapper.py  test_training_loop_small.py
v3/encoder-trainer-v3/: pyproject.toml
v3/encoder-trainer-v3/configs/: integration_test.json
v3/encoder-trainer-v3/data/: dummy_train.jsonl
v3/encoder-trainer-v3/scripts/: train.py
v3/encoder-trainer-v3/src/encoder_trainer/: __init__.py  config.py  metrics.py  trainer.py
v3/encoder-trainer-v3/src/encoder_trainer/data/: collators.py  dataset.py
v3/encoder-trainer-v3/src/encoder_trainer/modeling/: encoder.py  heads.py
v3/encoder-trainer-v3/tests/: test_main.py
