[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "encoder-trainer"
version = "0.1.0"
description = "Unified Encoder-Only Trainer for Text Classification and SCE"
requires-python = ">=3.9"
authors = [
    { name = "Antigravity", email = "antigravity@deepmind.com" }
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "peft>=0.5.0",
    "datasets>=2.14.0",
    "scikit-learn",
    "pydantic>=2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/encoder_trainer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
